# hello-solana-zk

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  proof.rs
assets/: circuit_final.zkey  hash.wasm  verification_key.json
circuits/: Multiplier.circom  MultiplierVerifier.sol  hash.circom  input.json  proof.json  public.json  witness.wtns
program/: Cargo.toml  verification_key.json
program/src/: lib.rs  proof.rs  verifier.rs  verifying_key.rs  verifying_key_ark.json
scripts/: compile-circuit.sh
utils/: de.js  gen_key.js  generate-proof-and-public-input.js  generate_verifier.js  parse_proof.js  parse_proof_to_rust.js  parse_vk.js  parse_vk_to_rust.js  proof.json
