[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.26"
groth16-solana = "0.0.3"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-groth16 = "0.5.0"
ark-std = "0.5.0"
ark-ec = "0.5.0"
serde = "1.0.217"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.43.0"
